--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-responsive-pinch-zoom-pan": "0.2.2"
+    "react-responsive-pinch-zoom-pan": "0.2.2",
+    "react-image-magnify": "2.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
