--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tnm",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Sam-Kelly.github.io/comp3000-tnmStaging",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
